# linklist

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  testing.yml
resources/: demo_site.html
src/: main.rs  parsing.rs
