[package]
name = "linklist"
version = "0.1.0"
edition = "2021"
authors = ["Kristian Zarebski"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.18", features = ["blocking"]}
clap = {version = "4.3.21", features = ["derive"]}
regex = "1.9.3"
colored = "2.0.4"
itertools = "0.11.0"