[package]
name = "linklist"
version = "0.1.1"
edition = "2021"
authors = ["Kristian Zarebski"]
description = "Internal web page link lister"
readme = "README.md"
repository = "https://github.com/artemis-beta/linklist/"
license = "MIT"
keywords = ["scraping", "web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.18", features = ["blocking"]}
clap = {version = "4.3.21", features = ["derive"]}
regex = "1.9.3"
colored = "2.0.4"
itertools = "0.11.0"
url = "2.4.1"
rpassword = "7.2.0"